--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,12 @@
     "env": {
         "browser": true,
         "es2021": true,
+        "node": true,
         "jest":true
     },
     "extends": [
-        "plugin:react/recommended",
-        "plugin:prettier/recommended",
-        "standard"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
     "parserOptions": {
         "ecmaFeatures": {
